components/apps/gitea/ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssh
  namespace: gitea
  annotations:
    metallb.universe.tf/allow-shared-ip: traefik
spec:
  ports:
  - name: ssh
    port: 2222
    protocol: TCP
    targetPort: 22
  selector:
    app: gitea
  type: ClusterIP
